Save 18/9 | Status:preparing | Interact with particles

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     
 </head>
 <body>
-    <div id="particles-js"></div>
-    <div id="particles-js2"></div>
+    <div id="particles-js" class="particlesClass0"></div>
         <header id="header">
             <img src="./Imagenes/LOGO.png" alt="LOGO">
             <ul>
@@ -54,9 +53,9 @@
                 <a href="" class="non-projects"><img src="Imagenes/work0.jpg" alt="Retrodrink"></a>
             </div>
         </div>
-        <dic id="particles">
-            <button class="particlesInteract">Interact with the particles!!</button>
-        </dic>
+        <div id="particles">
+            <button class="particlesInteract btn-interact">Interact with the particles!!</button>
+        </div>
         <footer id="footer">
             <a target="_blank" href="https://github.com/lucasjaime"><img src="Imagenes/github-logo.png" alt="github"></a>
             <a target="_blank" href="https://wa.me/1157643109"><img src="Imagenes/wpp.png" alt="whatsapp"></a>
