Save 22/9 | Status: beta | Modification: img, menu

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
         <header id="header">
             <img src="./Imagenes/LOGO.png" alt="LOGO">
             <ul class="menuV">
-                <li><a href="#main">About</a></li>
-                <li><a href="#nav">Tech skills</a></li>
-                <li><a href="#projects">Portfolio</a></li>
-                <li><a class="CV">Download CV</a></li>
-                <li><a href="#footer">Contact</a></li>
+                <li><a class="closeMenu" href="#main">About</a></li>
+                <li><a class="closeMenu" href="#nav">Tech skills</a></li>
+                <li><a class="closeMenu" href="#projects">Portfolio</a></li>
+                <li><a class="CV closeMenu">Download CV</a></li>
+                <li><a class="closeMenu" href="#footer">Contact</a></li>
             </ul>
             <ul class="menuI"><li><img src="./Imagenes/menu-hamburguesa.png" alt="menu-hamburguesa"></li></ul>
         </header>
         <main id="main">
             <div class="presentation">
                 <h2 class="nombre">Hello, my name is  Lucas Jaime, welcome to my portfolio!</h2>
-                <p>I am a frontend developer and IT security analyst waiting for a big challenge. Student of electronic engineering and physical sciences at the University of Buenos Aires and a great fan of chess</p>
+                <p>I'm a frontend developer and IT security analyst. I study electronic engineering and physical sciences at the University of Buenos Aires and in my free time I like to improve my chess</p>
             </div>
         </main>
     
@@ -46,7 +46,7 @@
                 <img src="Imagenes/html.png" alt="html"><input type="range" min="0" max="10" value="9" readonly onmousedown="return false;">
                 <img src="Imagenes/CSS.png" alt="css"><input type="range" min="0" max="10" value="9" readonly onmousedown="return false;">
                 <img src="Imagenes/JS.png" alt="js"><input type="range" min="0" max="10" value="7" readonly onmousedown="return false;">
-                <img src="Imagenes/bs.png" alt="bs"><input type="range" min="0" max="10" value="8" readonly onmousedown="return false;">
+                <img src="Imagenes/bs.png" alt="bs"><input type="range" min="0" max="10" value="6" readonly onmousedown="return false;">
                 <img src="Imagenes/sass.png" alt="sass"><input type="range" min="0" max="10" value="8" readonly onmousedown="return false;">
             </div>
         </nav>
@@ -56,9 +56,9 @@
             </div>
             <div class="projects-done">
                 <a href="https://lucasjaime.github.io/retro-jaime/" target="_blank"><img src="Imagenes/Retro.jpg" alt="Retrodrink"></a>
-                <a href="" class="non-projects"><img src="Imagenes/work0.jpg" alt="Retrodrink"></a>
-                <a href="" class="non-projects"><img src="Imagenes/work0.jpg" alt="Retrodrink"></a>
-                <a href="" class="non-projects"><img src="Imagenes/work0.jpg" alt="Retrodrink"></a>
+                <a class="non-projects"><img src="Imagenes/work0.png" alt="Retrodrink"></a>
+                <a class="non-projects"><img src="Imagenes/work0.png" alt="Retrodrink"></a>
+                <a class="non-projects"><img src="Imagenes/work0.png" alt="Retrodrink"></a>
             </div>
         </div>
         <div id="particles">
@@ -72,6 +72,6 @@
         </footer>
     <!--ParticlesJS-->
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script src="./JS/particles.js"></script>
+    <script src="JS/app.js"></script>
 </body>
 </html>
