Save 26/9 | Status: Completed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="mostrarIdiomas" class="idioma0">
         <div class="closeIdiomas"><img src="./Imagenes/close.png" alt="close"></div>
         <div class="btn-idiom">
-            <a href="./CV/Lucas Jaime CV English.pdf" download class="idiomaCV">Donwload in english</a>
+            <a href="./CV/Lucas Jaime English.pdf" download class="idiomaCV">Donwload in english</a>
             <a href="./CV/Lucas Jaime Spanish.pdf" download class="idiomaCV">Donwload in spanish</a>
         </div>
     </div>
